# hscredit

./: .gitignore  EDA_Module_Integration_Plan.md  EDA_Redesign_Plan_v2.md  INITIALIZATION_SUMMARY.md  LICENSE  Makefile  Metrics_Binning_Refactor_Summary.md  Metrics_Integration_Plan.md  Metrics_Integration_Summary.md  Metrics_Module_Redesign.md  Metrics_Redesign_Summary.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  _test_numexpr.py  clear_cache.sh  eda_redesign_plan.md  pyproject.toml  pytest.ini  requirements.txt  research_plan_hscredit_project.md  research_report_finance_eda_methods.md  research_report_github_eda_libraries.md  research_report_hscredit_project_overview.md  setup.py  test_all_examples.py  test_phase1.py  本地建模代码审查报告.md
.claude/: settings.local.json
docs/: ARCHITECTURE_DESIGN.md  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  RISK_MODELS_DESIGN.md  ROADMAP.md
docs/sphinx/: DEPLOYMENT_GUIDE.md  Makefile  README.md  api-quick-reference.md  bin-table-display-guide.md  build_docs.py  categorical-binning-rules.md  categorical-binning-summary-v2.md  categorical-binning-summary.md  conf.py  custom-loss-implementation.md  excel-writer-api-guide.md  excel-writer-migration.md  feature-bin-stats-grey-removal.md  import-guide.md  (+18 more)
examples/: 00_project_overview.ipynb  01_binning.ipynb  01_binning.nbconvert.ipynb  01_binning_results.xlsx  01_excel_writer_validation.ipynb  02_binning_separate_methods.ipynb  02_encoders.ipynb  03_optimal_binning_unified.ipynb  03_selectors.ipynb  04_feature_bin_stats.ipynb  04_models.ipynb  04_models.nbconvert.ipynb  05_categorical_binning_executed.ipynb  05_eda.ipynb  05_metrics.ipynb  05_rules.ipynb  06_eda.ipynb  06_eda.nbconvert.ipynb  06_metrics.ipynb  06_viz.ipynb  07_encoders_demo.ipynb  07_metrics.ipynb  07_viz.ipynb  08_bin_table_display_demo.ipynb  08_complete_workflow.ipynb  08_eda.ipynb  08_rules.ipynb  08_stability.ipynb  09_auto_feature_analysis_report.ipynb  09_complete_workflow.ipynb  09_feature_engineering.ipynb  09_feature_engineering.nbconvert.ipynb  09_rules.ipynb  09_scorecard_full_pipeline.ipynb  09_scorecard_full_pipeline1.ipynb  10_complete_workflow.ipynb  10_financial.ipynb  10_financial.nbconvert.ipynb  10_overdue_predictor.ipynb  10_report.ipynb  (+56 more)
hscredit/: __init__.py  exceptions.py
scripts/: clean_docstrings.py  convert_docstring_style.py  convert_docstring_to_google_style.py  convert_to_google_style.py  fix_docstring_indent.py  fix_notebook_params.py  quick_test.py  run_validation.sh  validate_environment.py  verify_imports.py
tests/: README.md  __init__.py  conftest.py  test_bin_label_brackets.py  test_bin_stats_formatting.py  test_bin_table_display.py  test_binning_detailed.py  test_binning_fixes.py  test_binning_review.py  test_categorical_binning_complete.py  test_default_behavior.py  test_feature_bin_stats_grey.py  test_feature_type.py  test_feature_type_edge_cases.py  test_final_verification.py  test_gbm_encoder_missing.py  test_monotonic_binning.py  test_notebook_fix.py  test_top_level_imports.py  verify_iv_formula.py
(+308 files in other folders)
